[tool.poetry]
name = "practical01"
version = "0.1.0"
description = ""
authors = ["DevenBhasin <s4824132@student.uq.edu.au>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"